--- a/style.css
+++ b/style.css
@@ -66,10 +66,15 @@ h1 {
 #buttonsdiv,
 #score,
 #instructionsd,
-#instructionsb {
+#instructionsb,
+#finalscore,
+#congratsd {
     position: absolute;
 }
 
+/*
+WHERE WORDLIST IS DISPLAYED
+*/
 #typr {
     /*border: 3px solid pink;*/
     top: 20px; left: 0px;
@@ -199,6 +204,31 @@ INSTRUCTIONS
 }
 
 /*
+FINALSCORE
+*/
+#finalscore {
+    border: 2px dashed black;
+    top: 125px; left: 175px;
+    width: 620px; height: 50px;
+    padding: 5px;
+    background-color: #e8eaed;
+    text-align: center;
+}
+
+/*
+CONGRATS BANANA.GIF
+*/
+#congratsd {
+    /*border: 3px purple solid;*/
+    bottom: 360px; left: 300px;
+    background-image: url(images/banana.gif);
+    background-repeat: no-repeat;
+    width: 350px; height: 350px;
+    display: none;
+    margin-top: 50px;
+}
+
+/*
 MEDIA QUERIES
 */
 
@@ -207,7 +237,7 @@ MEDIA QUERIES
     font-size: 100px;
 }
 
-@media(max-width: 700px) and (max-height: 700px) {
+@media(max-width: 700px) {
     body *:not(#mediaQ) {
         display: none;
     }
